# strategy-oop-examples

./: .gitignore  README.md
fortran/: CMakeLists.txt
fortran/src/: solver.F90  test_program.F90
fortran/src/updaters/: Newton_Raphson_updater.F90  steepest_descent_updater.F90  updater.F90
python/: solver.py  test_program.py  updaters.py
